WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
257004
RemoteLayerTreeDisplayRefreshMonitor::requestRefreshCallback doesn't clear scheduled state
https://bugs.webkit.org/show_bug.cgi?id=257004
Summary
RemoteLayerTreeDisplayRefreshMonitor::requestRefreshCallback doesn't clear sc...
Matt Woodrow
Reported
2023-05-18 18:45:11 PDT
RemoteLayerTreeDisplayRefreshMonitor::requestRefreshCallback dispatches a task to the main thread and sets scheduled to true. When that task runs, it triggers the rendering update but doesn't set scheduled back to false. Normally, the rendering update results in a commit to the UI process, and then we get a RemoteLayerTreeDrawingArea::displayDidRefresh callback, which sets scheduled to false (but also triggers a second rendering update).
Attachments
Add attachment
proposed patch, testcase, etc.
Matt Woodrow
Comment 1
2023-05-18 18:45:43 PDT
<
rdar://107848069
>
Matt Woodrow
Comment 2
2023-05-18 18:50:08 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/14052
EWS
Comment 3
2023-05-20 18:40:10 PDT
Committed
264297@main
(f0847a50740a): <
https://commits.webkit.org/264297@main
> Reviewed commits have been landed. Closing PR #14052 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug