RemoteLayerTreeDisplayRefreshMonitor::requestRefreshCallback doesn't clear scheduled state. https://bugs.webkit.org/show_bug.cgi?id=257004 <rdar://107848069>

Reviewed by Simon Fraser.

RemoteLayerTreeDisplayRefreshMonitor::requestRefreshCallback dispatches a task to the main thread and sets scheduled to true.

When that task runs, it triggers the rendering update but doesn't set scheduled back to false.

Normally, the rendering update results in a commit to the UI process, and then we get a RemoteLayerTreeDrawingArea::displayDidRefresh callback, which sets scheduled to false (but also triggers a second rendering update)

This makes it more clear as to whether we're dispatching a task, or waiting for a pending displayDidRefresh in order to schedule a refresh callback, and sets the scheduled state correctly.

* Source/WebKit/WebProcess/WebPage/RemoteLayerTree/RemoteLayerTreeDisplayRefreshMonitor.mm:
(WebKit::RemoteLayerTreeDisplayRefreshMonitor::requestRefreshCallback):
(WebKit::RemoteLayerTreeDisplayRefreshMonitor::triggerDisplayDidRefresh):
* Source/WebKit/WebProcess/WebPage/RemoteLayerTree/RemoteLayerTreeDrawingArea.h:
(WebKit::RemoteLayerTreeDrawingArea::displayDidRefreshIsPending const):

Canonical link: https://commits.webkit.org/264297@main